--- a/findly-builder/src/app/components/add-source/add-source.component.html
+++ b/findly-builder/src/app/components/add-source/add-source.component.html
@@ -242,7 +242,7 @@
         <div class="modal-body">
           <div *ngIf="selectedSourceType" class="crerateWebCrawl" [ngClass]="{'pr-0': resourceIDToOpen}">
             <div class="crawl-form-title" *ngIf="!resourceIDToOpen"></div>
-            <div class="kr-sg-input-text mb-4">
+            <div class="kr-sg-input-text mb-4" *ngIf="!(selectedSourceType.resourceType==='file')">
               <div class="label-text">Source Title</div>
               <input type="url" autocomplete="off" maxlength="60" id="addSourceTitleInput" name="sourceTitle"
                 placeholder="Enter Title" [(ngModel)]="newSourceObj.name" (change)="inputChanged('title')"
@@ -366,7 +366,7 @@
                         <ng-container *ngIf="fileObj.fileName && selectedSourceType.sourceType=='content'">
                           <div class="upload-files-radio-data">
                             <div class="title">Uploaded files</div>
-                            <div class="sort-by-data">
+                            <div class="sort-by-data d-none">
                               <div class="sort-by-title">Sort By:</div>
                               <div class="kr-sg-radiobutton">
                                 <input id="radio-1" name="radio" class="radio-custom" type="radio" checked>
@@ -379,14 +379,14 @@
                             </div>
                           </div>
                           <div class="kr-sg-file-drag-drop w-100">
-                            <div class="uploaded-file-name" *ngFor="let file of filesListData" [ngClass]="{'error':(fileObj.fileUploadError && !fileObj.fileUploadInProgress)}">
+                            <div class="uploaded-file-name" *ngFor="let file of filesListData;let index = index" [ngClass]="{'error':(fileObj.fileUploadError && !fileObj.fileUploadInProgress)}">
                               <div class="file-close-text">
                                 <div class="d-flex align-items-center img-block-data">
-                                  <img *ngIf="file.type  === 'application/pdf'" class="type_img" src="assets/icons/file_type_image.svg">
-                                  <img *ngIf="file.type === ' '" class="type_img" src="assets/icons/doc_logo.svg">
-                                  <img *ngIf="file.type === 'txt/plain'" class="type_img" src="assets/icons/txt_icon.svg">
-                                  <img *ngIf="file.name.replace('.', ' ') === 'xlsx'" class="type_img" src="assets/icons/excel_logo.svg">
-                                  <img *ngIf="file.name.replace('.', ' ') === 'ppt'" class="type_img" src="assets/icons/ppt_logo.svg">
+                                  <img *ngIf="file.name.substring(file.name.lastIndexOf('.'))=== '.pdf'" class="type_img" src="assets/icons/file_type_image.svg">
+                                  <img *ngIf="file.name.substring(file.name.lastIndexOf('.')) === '.doc'" class="type_img" src="assets/icons/doc_logo.svg">
+                                  <img *ngIf="file.name.substring(file.name.lastIndexOf('.')) === '.txt'" class="type_img" src="assets/icons/txt_icon.svg">
+                                  <img *ngIf="file.name.substring(file.name.lastIndexOf('.')) === '.xlsx'" class="type_img" src="assets/icons/excel_logo.svg">
+                                  <img *ngIf="file.name.substring(file.name.lastIndexOf('.')) === '.ppt'" class="type_img" src="assets/icons/ppt_logo.svg">
                                 </div>
                                 <div class="text-content">
                                   <div class="file-name" [innerHTML]="file.name"></div>
@@ -395,7 +395,7 @@
                                   </div>
                                   <!-- <mat-progress-bar mode="indeterminate" class="progress-bar-data"></mat-progress-bar> -->
                                 </div>
-                                <img src="assets/images/close.svg" class="close-file adjust_z_index" (click)="removeFile()">
+                                <img src="assets/images/close.svg" class="close-file adjust_z_index" (click)="removeFile(index)">
                               </div>
                               <!-- <div class="progress-status">
                                 <img *ngIf="fileObj.fileUploadInProgress" class="progSpinner"
