fly-3175 Overview & Dashboard

--- a/findly-builder/src/app/components/dashboard/dashboard.component.html
+++ b/findly-builder/src/app/components/dashboard/dashboard.component.html
@@ -131,7 +131,7 @@
                 </div>
                 <div class="col cards-data">
                     <div class="content">
-                        <div class="title-info">{{'metrics.dash_board_view.clicks'| translate}}
+                        <div class="title-info">{{'metrics.dash_board_view.searches_with_click'| translate}}
                             <img src="assets/icons/gray_info.svg" placement="top-center"
                                 ngbTooltip="No. of searches where at least one result was clicked on by the search user"
                                 [container]="'body'" tooltipClass="dashboard-custom-tooltips" class="pl-1">
