fly-3367(Independant loader done)

--- a/findly-builder/src/app/components/add-source/add-source.component.html
+++ b/findly-builder/src/app/components/add-source/add-source.component.html
@@ -390,7 +390,7 @@
                                 </div>
                                 <div class="text-content">
                                   <div class="file-name" [innerHTML]="file.name"></div>
-                                  <div *ngIf="showProgressBar" class="progress-bar-data">
+                                  <div *ngIf="file.showProgressBar" class="progress-bar-data">
                                     <img src="assets/images/progressBar.gif">
                                   </div>
                                   <!-- <mat-progress-bar mode="indeterminate" class="progress-bar-data"></mat-progress-bar> -->
