--- a/findly-builder/src/app/components/dashboard/dashboard.component.scss
+++ b/findly-builder/src/app/components/dashboard/dashboard.component.scss
@@ -264,7 +264,11 @@
                 font-weight: 500;
                 font-size: 16px;
                 line-height: 19px;                
-            }   
+            }  
+            .slider{
+                right: 0;
+                position: absolute;
+            } 
             .empty-feedback{
                 height: calc(100% - 60px);
                 display: flex;
@@ -272,14 +276,15 @@
                 justify-content: center;            
                 position: relative;
                 .title-empty{
-                    color: #5F6368;
-                    font-weight: bold;
-                    font-size: 26px;
-                    line-height: 31px;
+                    color: #202124;
+                    // font-weight: bold;
+                    // font-size: 26px;
+                    // line-height: 31px;
+                    text-align: center;
                     position: absolute;
-                    bottom: 41px;
-                    width: 200px;
-                    left: 15px;
+                     bottom: 41px;
+                   // width: 200px;
+                    // left: 15px;
                 }
             }
             .paginations_list{
