--- a/findly-builder/src/app/components/search-insights/search-insights.component.html
+++ b/findly-builder/src/app/components/search-insights/search-insights.component.html
@@ -111,8 +111,8 @@
                                             <span>View Results</span>
                                         </div>
                                     </div>
-                                    <div class="col-1 title">{{result.searches}}</div>
-                                    <div class="col-1 title">{{result.searches}}</div>
+                                    <div class="col-1 title">{{result.thumbsUps}}</div>
+                                    <div class="col-1 title">{{result.thumbsDowns}}</div>
                                 </div>
                             </div>
                             <div *ngIf='QWR_totalRecord && QWR_totalRecord>10' style="margin : 15px">
