--- a/findly-builder/src/app/components/summary/summary.component.html
+++ b/findly-builder/src/app/components/summary/summary.component.html
@@ -17,11 +17,10 @@
           <ng-container *ngIf="!loading_skelton">
             <div class="title">{{'overview.totalUsers' | translate}} <span>({{'overview.last_24hrs' |
                 translate}})</span>
-                <img src="assets/icons/gray_info.svg"
-                ngbTooltip="Number of unique users performed search during the selected period"
-                placement="top-center" [container]="'body'" tooltipClass="dashboard-custom-tooltips"
-                class="pl-1">
-              </div>
+              <img src="assets/icons/gray_info.svg"
+                ngbTooltip="Number of unique users performed search during the selected period" placement="top-center"
+                [container]="'body'" tooltipClass="dashboard-custom-tooltips" class="pl-1">
+            </div>
             <div class="count-graph-data">
               <div class="count-sec">
                 <div class="count">{{totalUsersStats?.totalUsers}}</div>
@@ -54,10 +53,10 @@
           <ng-container *ngIf="!loading_skelton">
             <div class="title">{{'overview.totalSearches'| translate}} <span>({{'overview.last_24hrs' |
                 translate}})</span>
-                <img src="assets/icons/gray_info.svg"
-                ngbTooltip="Total number of searches performed during the selected period"
-                placement="top-center" [container]="'body'" tooltipClass="dashboard-custom-tooltips"
-                class="pl-1"></div>
+              <img src="assets/icons/gray_info.svg"
+                ngbTooltip="Total number of searches performed during the selected period" placement="top-center"
+                [container]="'body'" tooltipClass="dashboard-custom-tooltips" class="pl-1">
+            </div>
             <div class="count-graph-data">
               <div class="count-sec">
                 <div class="count">{{totalSearchesStats?.totalSearches}}</div>
@@ -90,9 +89,10 @@
           <ng-container *ngIf="!loading_skelton">
             <div class="title">{{'overview.resultRate' | translate}} <span>({{'overview.last_24hrs' |
                 translate}})</span>
-                <img src="assets/icons/gray_info.svg" placement="top-center"
-                ngbTooltip="Total number of searches that returned at least one result"
-                [container]="'body'" tooltipClass="dashboard-custom-tooltips" class="pl-1"></div>
+              <img src="assets/icons/gray_info.svg" placement="top-center"
+                ngbTooltip="Total number of searches that returned at least one result" [container]="'body'"
+                tooltipClass="dashboard-custom-tooltips" class="pl-1">
+            </div>
             <div class="count-graph-data">
               <div class="count-sec">
                 <div class="count">
@@ -131,8 +131,8 @@
           <ng-container *ngIf="!loading_skelton">
             <div class="title">{{'overview.clicks' | translate}} <span>({{'overview.last_24hrs' | translate}})</span>
               <img src="assets/icons/gray_info.svg" placement="top-right"
-              ngbTooltip="No. of searches where at least one result was clicked on by the search user"
-              [container]="'body'" tooltipClass="dashboard-custom-tooltips" class="pl-1">
+                ngbTooltip="No. of searches where at least one result was clicked on by the search user"
+                [container]="'body'" tooltipClass="dashboard-custom-tooltips" class="pl-1">
             </div>
             <div class="count-graph-data">
               <div class="count-sec">
@@ -218,8 +218,9 @@
                   *ngIf="indices?.botActions?.linked_bot_name!=null&&indices?.botActions?.tasks!=0">
                   {{indices?.botActions?.linked_bot_name}} | {{indices?.botActions?.tasks}} {{'overview.Tasks' |
                   translate}}</div>
-                <div class="col-7 data-count"
-                  *ngIf="indices?.botActions?.linked_bot_name==null&&indices?.botActions?.tasks==0">
+                <div class="col-7 data-count link"
+                  *ngIf="indices?.botActions?.linked_bot_name==null&&indices?.botActions?.tasks==0"
+                  (click)="redirectToActions()">
                   {{'overview.link_bot' | translate}}</div>
               </div>
             </ng-container>
