--- a/findly-builder/src/app/components/bot-action/bot-action.component.scss
+++ b/findly-builder/src/app/components/bot-action/bot-action.component.scss
@@ -249,6 +249,10 @@
                     justify-content: flex-end;
                     .kr-sg-input-search{
                         width: 250px;
+                        input{
+                            padding-left: 34px;
+                            padding-right: 10px;
+                        }
                         .close-icon {
                             position: absolute;
                             right: 11px;
