--- a/findly-builder/src/app/components/result-insights/result-insights.component.html
+++ b/findly-builder/src/app/components/result-insights/result-insights.component.html
@@ -62,11 +62,41 @@
                 </div>       -->
                 <div class="table_data_content">
                     <div class="table_header row m-0">
-                        <div class="col-4 title"><img src="assets/icons/sort_up_down.svg" class="mr-1">{{'metrics.result_insights.Search_Results'| translate}}</div>
-                        <div class="col-2 title"><img src="assets/icons/sort_up_down.svg" class="mr-1">{{'metrics.result_insights.Appearances'| translate}}</div>
-                        <div class="col-2 title"><img src="assets/icons/sort_up_down.svg" class="mr-1">{{'metrics.result_insights.No_of_Clicks'| translate}}</div>
-                        <div class="col-2 title"><img src="assets/icons/sort_up_down.svg" class="mr-1">{{'metrics.result_insights.Click-Through_Rate'| translate}}</div>
-                        <div class="col-2 title d-flex"><img src="assets/icons/sort_up_down.svg" class="mr-1"><span>{{'metrics.result_insights.Avg_Position'| translate}}</span></div>
+                        <div class="col-4 title">
+                            <span class="d-flex align-items-center flex-column mr-1">
+                                <img src="assets/icons/caretDown.svg" class="sortImg downArrow">
+                                <img src="assets/icons/caretDown.svg" class="sortImg upArrow">
+                            </span>
+                            {{'metrics.result_insights.Search_Results'| translate}}
+                        </div>
+                        <div class="col-2 title">
+                            <span class="d-flex align-items-center flex-column mr-1">
+                                <img src="assets/icons/caretDown.svg" class="sortImg downArrow">
+                                <img src="assets/icons/caretDown.svg" class="sortImg upArrow">
+                            </span>
+                            {{'metrics.result_insights.Appearances'| translate}}
+                        </div>
+                        <div class="col-2 title">
+                            <span class="d-flex align-items-center flex-column mr-1">
+                                <img src="assets/icons/caretDown.svg" class="sortImg downArrow">
+                                <img src="assets/icons/caretDown.svg" class="sortImg upArrow">
+                            </span>
+                            {{'metrics.result_insights.No_of_Clicks'| translate}}
+                        </div>
+                        <div class="col-2 title">
+                            <span class="d-flex align-items-center flex-column mr-1">
+                                <img src="assets/icons/caretDown.svg" class="sortImg downArrow">
+                                <img src="assets/icons/caretDown.svg" class="sortImg upArrow">
+                            </span>
+                            {{'metrics.result_insights.Click-Through_Rate'| translate}}
+                        </div>
+                        <div class="col-2 title d-flex">
+                            <span class="d-flex align-items-center flex-column mr-1">
+                                <img src="assets/icons/caretDown.svg" class="sortImg downArrow">
+                                <img src="assets/icons/caretDown.svg" class="sortImg upArrow">
+                            </span>
+                            <span>{{'metrics.result_insights.Avg_Position'| translate}}</span>
+                        </div>
                         <!-- <div class="col-2 title d-flex"><img src="assets/icons/sort_up_down.svg" class="mr-1"><span>{{'metrics.result_insights.Positive_Feedback'| translate}}</span></div>-->
                         <!-- <div class="col-2 title d-flex"><img src="assets/icons/sort_up_down.svg" class="mr-1"><span>{{'metrics.result_insights.Negative_Feedback'| translate}}</span></div>  -->
                     </div>
