--- a/findly-builder/src/app/components/result-insights/result-insights.component.scss
+++ b/findly-builder/src/app/components/result-insights/result-insights.component.scss
@@ -188,6 +188,26 @@
             text-transform: capitalize;
             color: #9AA0A6;
             word-break: break-word;
+            display: flex;
+            align-items: center;
+            .sortImg{                                                       
+                position: relative;
+                cursor: pointer;
+                &.upArrow {
+                    transform: none !important;
+                }
+                &.downArrow {
+                    transform: rotate(180deg) !important;
+                    top: -1px !important;
+                    position: relative;
+                }
+                &.assending{
+                    transform: rotate(180deg);
+                }
+                &.decending{
+                    transform: rotate(0deg);
+                }
+            } 
         }                    
     }
     .table_body{
