--- a/findly-builder/src/app/components/search-insights/search-insights.component.scss
+++ b/findly-builder/src/app/components/search-insights/search-insights.component.scss
@@ -184,6 +184,26 @@
             line-height: 14px;
             text-transform: capitalize;
             color: #9AA0A6;
+            display: flex;
+            align-items: center;
+            .sortImg{                                                       
+                position: relative;
+                cursor: pointer;
+                &.upArrow {
+                    transform: none !important;
+                }
+                &.downArrow {
+                    transform: rotate(180deg) !important;
+                    top: -1px !important;
+                    position: relative;
+                }
+                &.assending{
+                    transform: rotate(180deg);
+                }
+                &.decending{
+                    transform: rotate(0deg);
+                }
+            }  
         }
     }
     .table_body {
