--- a/findly-builder/src/app/components/user-engagement/user-engagement.component.html
+++ b/findly-builder/src/app/components/user-engagement/user-engagement.component.html
@@ -109,7 +109,7 @@
                             </div>
                         </div>
                         <div echarts [options]="heatMapChartOption" class="demo-chart-graphMode" style="z-index : 1"></div>
-                        <div class="d-flex justify-content-between mt-1" style="margin-top:-2% !important">
+                        <div class="d-flex justify-content-between mt-1">
                             <!-- <ng5-slider [(value)]="durationRange1" [(highValue)]="durationRange2" [options]="durationOptions" class="double_slider slider1" (userChangeEnd)="onUserChangeEnd('duration', $event, 'slider1')" (userChange)="onUserChange($event, 'slider1', true)"></ng5-slider> -->
                             <div class="row m-0 bottom-row col-12 ">
                                 <div class="slider-sec col-6 p-0">
